vamos que este año lo logramos

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -90,7 +90,7 @@ html{
 .hero{
     background-color: var(--purple900);
     position: relative;
-    height: 771px;
+    height: 608px;
 }
 
 .container-hero{
@@ -134,4 +134,62 @@ html{
     position: absolute;
     top: 250px;
     right:-10px
+}
+.imagen-hero{
+    position: absolute;
+    top: 440px;        
+    left: 50%;
+    transform: translateX(-50%);
+    width: 737px;
+}
+.imagen-hero img{
+    width: 100%;
+}
+
+.ornamental {
+    position: absolute;
+    width: 100%;
+    top: 605px;
+}
+
+.ornamental svg {
+    width: 100%;
+    height: 180px;   /* 👈 más altura = más panza */
+    display: block;
+}
+
+
+
+
+@media (max-width:520px)  {
+    .Whirlpool, .Whirlpool2{
+        display: none;
+    }
+    .navbar{
+        display: flex;
+        max-width: 90%;
+        justify-content:  space-between;
+        align-items: center;
+        height: 35px;
+        margin: 0 auto;
+        margin-top:50px;
+    }
+    .hero{
+        padding: 50px 0;
+    }
+    .container-hero{
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        height: 397px;
+        margin: 0 auto;
+    }    
+    .container-hero h1{
+        text-align: center;
+        font-family: 'Fraunces2', sans-serif;
+        font-weight: normal;
+        font-size: 60px;
+        color: var(--white);
+    }
+   
 }
