--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -257,7 +257,7 @@ html{
 }
 .count-content p{
     font-family: 'Manrope',sans-serif;
-    font-size: 20px;
+    font-size:21px;
     color: var(--white);
     font-weight: lighter;
 }
@@ -272,10 +272,37 @@ html{
     cursor: pointer;
     transition: all 0.3s ease;
 }
-
+.Whirlpool3{
+    position: absolute;
+    top: 210px;
+    left: 420px;
+}
 
 .count-content button {
     align-self: flex-start;
+}
+
+/********************FOOTER*********/
+footer{
+    width: 100%;
+    height: 324px;
+}
+.container-footer{
+    display: flex;
+    width: 116px;
+    height: 101px;
+    margin: 0 auto ;
+    flex-direction: column;
+    justify-content:  space-between;
+}
+.footer-logo{
+    width: 96px;
+    height: 25px;
+}
+.footer-icons {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
 }
 
 @media (max-width:520px)  {
@@ -292,7 +319,8 @@ html{
         margin-top:50px;
     }
     .hero{
-        padding: 50px 0;
+        padding: 0px;
+        height: 481px;
     }
     .container-hero{
         display: flex;
@@ -307,6 +335,33 @@ html{
         font-weight: normal;
         font-size: 60px;
         color: var(--white);
+    }
+    .imagen-hero{
+        position: absolute;
+        top: 440px;        
+        left: 50%;
+        transform: translateX(-50%);
+        width: 360px;
+    }
+    .ornamental {
+        position: absolute;
+        width: 100%;
+        top: 480px;
+    }
+    .value{
+       margin-top: 180px;
+       height: auto;
+       padding-bottom: 80px;
+    }
+    .container-value{
+        width: 100%;
+        height: auto;
+        display: flex;
+        gap: 50px;
+        flex-direction:column;
+        margin: 0 auto;
+        align-items: center;
+        justify-content: space-between;
     }
    
 }
